--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,7 +3,7 @@ on: [push]
 jobs:
 
   build:
-    name: Build
+    name: Build and Test
     runs-on: ubuntu-latest
     steps:
 
@@ -24,4 +24,4 @@ jobs:
       run: go build -v .
     
     - name: Test
-      run: go test ...
+      run: go test ./...
